add gallery block

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,55 @@
           <div class="exhibition__name">Від класицизму до романтизму</div>
         </div>
       </section>
+
+      <section class="gallery">
+        <div class="container gallery__container">
+          <div class="gallery__title title">Галерея</div>
+          <div class="gallery__images">
+            <img
+              src="images/gallery-1.png"
+              alt="ukrainian girl"
+              class="gallery__img"
+            >
+
+            <img
+              src="images/gallery-3.png"
+              alt="geese"
+              class="gallery__img"
+            >
+
+            <img
+              src="images/gallery-2.png"
+              alt="village in winter"
+              class="gallery__img"
+            >
+
+            <img
+              src="images/gallery-4.png"
+              alt="woman on the bench"
+              class="gallery__img"
+            >
+
+            <img
+              src="images/gallery-5.png"
+              alt="sunset"
+              class="gallery__img"
+            >
+
+            <img
+              src="images/gallery-6.png"
+              alt="sunset"
+              class="gallery__img"
+            >
+          </div>
+          <div class="gallery__buttons slider">
+            <div class="slider__button slider__button--active"></div>
+            <div class="slider__button"></div>
+            <div class="slider__button"></div>
+            <div class="slider__button"></div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
