--- a/src/index.html
+++ b/src/index.html
@@ -51,44 +51,44 @@
             <div class="header__image-text">Дівчина з Поділля <br>В. Тропінін</div>
           </div>
         </div>
-<!--        <div class="container">-->
-<!--          <div class="header__visit ">-->
+        <div class="container">
+          <div class="header__visit">
 
-<!--            <div class="header__visit-content">-->
-<!--              <div class="header__visit-about about">-->
-<!--                <div class="about__item">-->
-<!--                  <p class="about__title">-->
-<!--                    Розклад сьогодні:-->
-<!--                  </p>-->
-<!--                  <p class="about__text">-->
-<!--                    12:00 - 19:00-->
-<!--                  </p>-->
-<!--                </div>-->
-<!--                <div class="about__item">-->
-<!--                  <div class="about__title">-->
-<!--                    <span>Адреса:</span>-->
-<!--                  </div>-->
-<!--                  <div class="about__text">-->
-<!--                    <span>Київ, вул. М. Грушевського, 6</span>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="header__visit-options">-->
-<!--                <ul>-->
-<!--                  <li><a href="#">Спланувати візит</a></li>-->
-<!--                  <li><a href="#">Виставки та події</a></li>-->
-<!--                  <li><a href="#">Колекція</a></li>-->
-<!--                </ul>-->
-<!--              </div>-->
-<!--              <a href="" class="button header__button">Купити квиток</a>-->
-<!--              <a href="" class="button header__button">Стати членом</a>-->
-<!--            </div>-->
-<!--            <img-->
-<!--              src="images/header-pic2.png"-->
-<!--              alt="visit"-->
-<!--              class="header__visit-image">-->
-<!--          </div>-->
-<!--        </div>-->
+            <div class="header__visit-content">
+              <div class="header__visit-about about">
+                <div class="about__item">
+                  <p class="about__title">
+                    Розклад сьогодні:
+                  </p>
+                  <p class="about__text">
+                    12:00 - 19:00
+                  </p>
+                </div>
+                <div class="about__item">
+                  <div class="about__title">
+                    <span>Адреса:</span>
+                  </div>
+                  <div class="about__text">
+                    <span>Київ, вул. М. Грушевського, 6</span>
+                  </div>
+                </div>
+              </div>
+              <div class="header__visit-options">
+                <ul>
+                  <li><a href="#">Спланувати візит</a></li>
+                  <li><a href="#">Виставки та події</a></li>
+                  <li><a href="#">Колекція</a></li>
+                </ul>
+              </div>
+              <a href="" class="button header__button">Купити квиток</a>
+              <a href="" class="button header__button">Стати членом</a>
+            </div>
+            <img
+              src="images/header-pic2.png"
+              alt="visit"
+              class="header__visit-image">
+          </div>
+        </div>
       </div>
       <main>
         <section class="exhibitions">
@@ -239,15 +239,76 @@
                 method="get"
                 id="form">
                 <label for="email">
-                  <input class="digest__input" type="email" id="email" placeholder="e-mail" name="email" required="">
+                  <input
+                    class="digest__input"
+                    type="email"
+                    id="email"
+                    placeholder="e-mail"
+                    name="email"
+                    required>
                 </label>
                 <button class="digest__button" type="submit"></button>
               </form>
             </div>
-
           </div>
         </section>
       </main>
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__content">
+            <div class="footer__item">
+              <div class="footer__title">Контакти</div>
+              <div class="footer__text">
+                <p>Київ,<br>
+                  вул. М. Грушевського, 6 <br>
+                  тел. 278-13-57, 278-74-54 <br>
+                  info@namu.kiev.ua</p>
+              </div>
+              <ul class="footer__sm">
+                <li><a href="№"><img src="images/facebook.png" alt=""></a></li>
+                <li><a href="№"><img src="images/telegram.png" alt=""></a></li>
+                <li><a href="№"><img src="images/instagram.png" alt=""></a></li>
+                <li><a href="№"><img src="images/twitter.png" alt=""></a></li>
+              </ul>
+            </div>
+            <div class="footer__item">
+              <div class="footer__title">Розклад роботи</div>
+              <ul>
+                <li><span class="footer__weekday">пн</span>вихідний</li>
+                <li><span class="footer__weekday">вт</span>вихідний</li>
+                <li><span class="footer__weekday">ср</span>10:00 - 17:00</li>
+                <li><span class="footer__weekday">чт</span>10:00 - 17:00</li>
+                <li><span class="footer__weekday">чт</span>12:00 - 19:00</li>
+                <li><span class="footer__weekday">сб</span>11:00 - 18:00</li>
+                <li><span class="footer__weekday">вс</span>10:00 - 17:00</li>
+              </ul>
+            </div>
+            <div class="footer__item">
+              <div class="footer__title">Членські програми</div>
+              <ul>
+                <li><a class="footer__link" href="#">Зробити разовий внесок</a></li>
+                <li><a class="footer__link" href="#">Індивідуальна</a></li>
+                <li><a class="footer__link" href="#">Корпоративна</a></li>
+              </ul>
+            </div>
+            <div class="footer__item">
+              <div class="footer__title">Про нас</div>
+              <ul>
+                <li><a href="#" class="footer__link">Історія</a></li>
+                <li><a href="#" class="footer__link">Обличчя музею</a></li>
+                <li><a href="#" class="footer__link">Вакансії</a></li>
+                <li><a href="#" class="footer__link">Новини</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer__bottom">
+            <span>© 2010 — 2020</span>
+            <a href="" class="footer__link">Privacy — Terms</a>
+
+          </div>
+        </div>
+
+      </footer>
     </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
