--- a/src/index.html
+++ b/src/index.html
@@ -38,25 +38,25 @@
               <a href="#gallery" class="nav__link">Галерея</a>
             </li>
             <li class="nav__list-item">
-              <a href="#contact" class="nav__link">Виставки та події</a>
+              <a href="#actual" class="nav__link">Виставки та події</a>
             </li>
             <li class="nav__list-item">
-              <a href="#about" class="nav__link">Відвідування</a>
+              <a href="#footer" class="nav__link">Відвідування</a>
             </li>
             <li class="nav__list-item">
-              <a href="#shop" class="nav__link">Стати нашим другом</a>
+              <a href="#subscribe" class="nav__link">Стати нашим другом</a>
             </li>
             <li class="nav__list-item">
-              <a href="#contact" class="nav__link">Про Нас</a>
+              <a href="#footer" class="nav__link">Про Нас</a>
             </li>
             <li class="nav__list-item">
-              <a href="#about" class="nav__link">Магазин</a>
+              <a href="#gallery" class="nav__link">Магазин</a>
             </li>
             <li class="nav__list-item">
-              <a href="#shop" class="nav__link">Блог</a>
+              <a href="#gallery" class="nav__link">Блог</a>
             </li>
             <li class="nav__list-item">
-              <a href="#shop" class="nav__link">Контакти</a>
+              <a href="#footer" class="nav__link">Контакти</a>
             </li>
           </ul>
 
@@ -77,7 +77,6 @@
       <section class="hero page__hero">
         <div class="hero__img"></div>
         <div class="hero__content">
-          <div class="decor-side hero__decor-side">події</div>
           <h1 class="hero__heading">
             худож<span class="hero__heading-clip">ній</span>
             <br>
@@ -99,14 +98,14 @@
       </section>
 
       <div class="container">
-        <section class="page__actual actual">
+        <section class="page__actual actual" id="actual">
           <div class="decor-side actual__decor-side">події</div>
 
           <h2 class="actual__heading">
             Актуальні події
           </h2>
 
-          <article class="post actualz">
+          <article class="post actual__post">
             <img
               src="./images/post-img-1.jpg"
               alt="some paint"
@@ -121,10 +120,11 @@
                 <span class="desc__date">26.08-29.11.2019</span>
               </div>
 
-              <h3 class="post__heading">Йду і повертаюсь</h3>
+              <a href="#"><h3 class="post__heading">Йду і повертаюсь</h3></a>
 
               <p class="post__text">
-                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980&#8209;1995 років.
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
+                мистецтво другої половини 1980&#8209;1995 років.
               </p>
             </div>
           </article>
@@ -144,7 +144,7 @@
                 <span class="desc__date">26.08-29.11.2019</span>
               </div>
 
-              <h3 class="post__heading">І спогади і мрії</h3>
+              <a href="#"><h3 class="post__heading">І спогади і мрії</h3></a>
 
               <p class="post__text">
                 Національний художній музей України до 100 річчя від дня народження видатної української художниці
@@ -155,17 +155,19 @@
         </section>
       </div>
       <section class="page__promo promo">
-        <div class="promo__content">
-          <div class="desc promo__desc">
-            <span class="desc__type">лекція</span>
-            <span class="desc__date">26/08/2019 - 11:00</span>
+        <a href="#">
+          <div class="promo__content">
+            <div class="desc promo__desc">
+              <span class="desc__type">лекція</span>
+              <span class="desc__date">26/08/2019 - 11:00</span>
+            </div>
+            <h3 class="promo__heading">Від класицизму до романтизму</h3>
           </div>
-          <h3 class="promo__heading">Від класицизму до романтизму</h3>
-        </div>
+        </a>
       </section>
 
       <div class="container">
-        <section class="page__gallery gallery">
+        <section class="page__gallery gallery" id="gallery">
           <h2 class="gallery__heading">Галерея</h2>
           <div class="gallery__slider">
             <img
@@ -252,7 +254,7 @@
         </section>
       </div>
 
-      <section class="page__subscribe subscribe">
+      <section class="page__subscribe subscribe" id="subscribe">
         <h2 class="subscribe__heading">Підписка</h2>
         <p class="subscribe__text">
           Бути в курсі всіх актуальних подій та останніх новин.
@@ -271,12 +273,107 @@
               width="8"
               height="12"
             >
-              <use href="./images/ico.svg#btn-arrow"></use>
+              <use href="./images/ico.svg#form-arrow"></use>
             </svg>
           </button>
         </form>
       </section>
     </main>
+
+    <div class="container">
+      <footer class="footer" id="footer">
+        <div class="footer__top">
+          <div class="footer__media">
+            <a href="#" class="logo footer__logo">
+              NA
+              <br>
+              MU
+            </a>
+
+            <div class="footer__media-links">
+              <a href="https://facebook.com" class="footer__media-link">
+                <svg width="12" height="24">
+                  <use href="./images/ico.svg#fb"></use>
+                </svg>
+              </a>
+              <a href="https://instagram.com" class="footer__media-link">
+                <svg width="25" height="24">
+                  <use href="./images/ico.svg#insta"></use>
+                </svg>
+              </a>
+            </div>
+
+          </div>
+
+          <div class="footer__content">
+            <div class="footer__info">
+              <div class="footer__info-block">
+                <div class="footer__info-item">Графік роботи</div>
+                <div class="footer__info-item">
+                  <span class="footer__time">12:00 — 20:00</span> середа <br>
+                  <span class="footer__time">12:00 — 20:00</span> четвер <br>
+                  <span class="footer__time">12:00 — 20:00</span> п’ятниця <br>
+                  <span class="footer__time">11:00 — 19:00</span> субота <br>
+                  <span class="footer__time">11:00 — 19:00</span> неділя
+                </div>
+                <div class="footer__info-item">
+                  <span class="footer__time">Вихідні:</span> понеділок, вівторок <br>
+                                                             Каса припиняє роботу за 1 годину
+                                                             до закриття музею
+                </div>
+              </div>
+
+              <div class="footer__info-block">
+                <div class="footer__info-item">Контакти:</div>
+                <div class="footer__info-item">
+                  <a href="https://goo.gl/maps/e7QXeKQ662VJYVi77" class="footer__info-link">
+                    вул. М. Грушевського,&nbsp;6; <br>
+                    Київ, 01001
+                  </a> <br>
+                  <a href="tel:+380442781357" class="footer__info-link">тел. +38 (044) 278-13-57</a> <br>
+                  <a href="fax:+380442787454" class="footer__info-link">факс +38 (044) 278-74-54</a> <br>
+                  <a href="mailto:info@namu.kiev.ua" class="footer__info-link">e-mail: info@namu.kiev.ua</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer__nav nav nav_footer">
+              <ul class="nav__list">
+                <li class="nav__list-item">
+                  <a href="#gallery" class="nav__link">Галерея</a>
+                </li>
+                <li class="nav__list-item">
+                  <a href="#footer" class="nav__link">Про Нас</a>
+                </li>
+                <li class="nav__list-item">
+                  <a href="#actual" class="nav__link">Виставки та події</a>
+                </li>
+                <li class="nav__list-item">
+                  <a href="#gallery" class="nav__link">Магазин</a>
+                </li>
+                <li class="nav__list-item">
+                  <a href="#footer" class="nav__link">Відвідування</a>
+                </li>
+                <li class="nav__list-item">
+                  <a href="#actual" class="nav__link">Блог</a>
+                </li>
+                <li class="nav__list-item">
+                  <a href="#subscribe" class="nav__link">Стати нашим другом</a>
+                </li>
+                <li class="nav__list-item">
+                  <a href="#footer" class="nav__link">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__bottom">
+          <div class="footer__bottom-item">Designed by Zhyriada Marina</div>
+          <div class="footer__bottom-item">Copyright © 2019. All Rights Reserved.</div>
+        </div>
+      </footer>
+    </div>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
