--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
       </div>
     </header>
 
-    <main class="main body__main">
+    <!-- <main class="main body__main">
       <div class="actual main__actual">
         <h3 class="actual__article">Актуальні події</h3>
 
@@ -216,7 +216,7 @@
         >
 
       </div>
-    </main>
+    </main> -->
   </body>
 
 </html>
