--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,16 @@
       <!-- <div class="header__background"></div> -->
 
       <div class="container header__container">
+
         <div class="header__top">
-          <div class="header__toggler"></div>
+
+          <div class="header__toggler toggler">
+            <div class="toggler__line"></div>
+          </div>
+
           <nav class="header__nav nav">
             <ul class="nav__list">
+
               <li class="nav__item">
                 <a href="#" class="nav__link">Home
                 </a>
@@ -39,7 +45,7 @@
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#lectures" class="nav__link">
+                <a href="#lecture" class="nav__link">
                 Лекції
                 </a>
               </li>
@@ -60,6 +66,8 @@
               </li>
             </ul>
           </nav>
+
+
           <a href="#" class="header__logo-link">
             <img
               src="images/logo.svg"
@@ -239,7 +247,9 @@
             type="text"
             class="subscribe__input"
             placeholder="E-mail"
-            onfocus="this.placeholder=''">
+            onfocus="this.placeholder=''"
+            required
+          >
           <input
             type="submit"
             class="subscribe__button"
@@ -248,7 +258,7 @@
       </section>
     </main>
 
-    <footer class="footer container">
+    <footer class="footer container" id="footer">
 
       <div class="footer__top">
 
