actual block done

--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
       </div>
     </header>
 
-    <!-- <main class="main body__main">
+    <main class="main body__main">
       <div class="actual main__actual">
         <h3 class="actual__article">Актуальні події</h3>
 
@@ -164,7 +164,7 @@
         </div>
       </div>
 
-      <div class="lecture main__lecture">
+      <!-- <div class="lecture main__lecture">
         <div class="lecture__text">
           <p class="lecture__lecture">лекція</p>
 
@@ -215,8 +215,8 @@
           alt="#"
         >
 
-      </div>
-    </main> -->
+      </div> -->
+    </main>
   </body>
 
 </html>
