--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
 
   <body>
     <header class="header">
-      <!-- <div class="header__background"></div> -->
+
+      <div class="header__background--mobile"></div>
 
       <div class="container header__container">
 
@@ -74,7 +75,10 @@
               alt="NaMu logo"
               class="header__logo">
           </a>
+
         </div>
+
+
         <div class="header__main">
           <div class="header__text">
             <h1 class="header__title">ХУДОЖ<span class="header__title-stroke">НІЙ</span>
