lecture block done

--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@
         </div>
       </div>
 
-      <!-- <div class="lecture main__lecture">
+      <div class="lecture main__lecture">
         <div class="lecture__text">
           <p class="lecture__lecture">лекція</p>
 
@@ -176,7 +176,7 @@
         </div>
       </div>
 
-      <div class="gallery main__gallery">
+      <!-- <div class="gallery main__gallery">
         <h3 class="gallery__article">Галерея</h3>
 
         <img
