Added required in input

--- a/src/index.html
+++ b/src/index.html
@@ -267,6 +267,7 @@
                   class="subscription__input"
                   type="email"
                   placeholder="Email"
+                  required
                 >
               </label>
               <button href="#email" class="subscription__button">
