add subscribe block

--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,24 @@
           </div>
         </div>
       </section>
+
+      <section class="subscribe">
+        <div class="title subscribe__title">Підписка</div>
+        <div class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </div>
+        <form class="subscribe__form form">
+          <label for="email"></label>
+          <input
+            class="form__input"
+            type="email"
+            name="email"
+            id="email"
+            placeholder="E-mail"
+          >
+          <button type="submit" class="form__button"></button>
+        </form>
+      </section>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
