--- a/src/index.html
+++ b/src/index.html
@@ -176,46 +176,66 @@
         </div>
       </div>
 
-      <!-- <div class="gallery main__gallery">
+      <div class="gallery main__gallery">
         <h3 class="gallery__article">Галерея</h3>
 
-        <img
-          class="gallery__firstImg"
-          src="images/galleryFirst.png"
-          alt="#"
-        >
+        <div class="gallery__images">
+          <img
+            class="gallery__firstImg"
+            src="images/galleryFirst.png"
+            alt="#"
+          >
 
-        <img
-          class="gallery__secondImg"
-          src="images/gallerySecond.png"
-          alt="#"
-        >
+          <img
+            class="gallery__secondImg"
+            src="images/gallerySecond.png"
+            alt="#"
+          >
 
-        <img
-          class="gallery__thirdImg"
-          src="images/galleryThird.png"
-          alt="#"
-        >
+          <img
+            class="gallery__thirdImg"
+            src="images/galleryThird.png"
+            alt="#"
+          >
 
-        <img
-          class="gallery__fourthImg"
-          src="images/galleryFourth.png"
-          alt="#"
-        >
+          <img
+            class="gallery__fourthImg"
+            src="images/galleryFourth.png"
+            alt="#"
+          >
 
-        <img
-          class="gallery__fifthImg"
-          src="images/galleryFifth.png"
-          alt="#"
-        >
+          <img
+            class="gallery__fifthImg"
+            src="images/galleryFifth.png"
+            alt="#"
+          >
 
-        <img
-          class="gallery__sixthImg"
-          src="images/gallerySixth.png"
-          alt="#"
-        >
+          <img
+            class="gallery__sixthImg"
+            src="images/gallerySixth.png"
+            alt="#"
+          >
+        </div>
 
-      </div> -->
+        <div class="gallery__dots">
+          <a href="#">
+            <div class="gallery__dot gallery__dot-active"></div>
+          </a>
+
+          <a href="#">
+            <div class="gallery__dot"></div>
+          </a>
+
+          <a href="#">
+            <div class="gallery__dot"></div>
+          </a>
+
+          <a href="#">
+            <div class="gallery__dot"></div>
+          </a>
+
+        </div>
+      </div>
     </main>
   </body>
 
