support block done

--- a/src/index.html
+++ b/src/index.html
@@ -236,6 +236,37 @@
 
         </div>
       </div>
+
+      <div class="support main__support">
+        <div class="support__content">
+          <h3 class="support__article">Підписка</h3>
+
+          <p class="support__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form>
+            <input
+              type="email"
+              class="support__input"
+              id="email"
+              name="email"
+              placeholder="E-mail"
+              required
+            >
+
+            <button type="submit" class="support__submit">
+              <img
+                class="support__img"
+                src="images/header__tickets-img.svg"
+                alt="buy tickets"
+              >
+            </button>
+          </form>
+        </div>
+
+      </div>
+
     </main>
   </body>
 
