--- a/src/index.html
+++ b/src/index.html
@@ -216,6 +216,26 @@
         </section>
       </div>
 
+      <selection class="subscription container__subscription">
+        <div class="subscription__wrapper">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form class="subscription__email">
+            <input
+              type="email"
+              id="email"
+              class="subscription__field"
+              name="email-field"
+              placeholder="E-mail"
+              required
+            >
+            <button type="submit" class="subscription__button button button--sub"></button>
+          </form>
+        </div>
+      </selection>
+
+
+
     </main>
 
 
