--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,11 @@
     <main class="main">
       <section class="events">
         <div class="events__container container">
-          <div class="events__title title">
-            Актуальні події
-          </div>
+          <a name="events">
+            <div class="events__title title">
+              Актуальні події
+            </div>
+          </a>
           <article class="events__exhibition exhibition">
             <img
               class="events__image"
@@ -76,7 +78,9 @@
 
       <section class="gallery">
         <div class="container gallery__container">
-          <div class="gallery__title title">Галерея</div>
+          <a name="gallery">
+            <div class="gallery__title title">Галерея</div>
+          </a>
           <div class="gallery__images">
             <img
               src="images/gallery-1.png"
@@ -124,7 +128,9 @@
       </section>
 
       <section class="subscribe">
-        <div class="title subscribe__title">Підписка</div>
+        <a name="subscribe">
+          <div class="title subscribe__title">Підписка</div>
+        </a>
         <div class="subscribe__text">
           Бути в курсі всіх актуальних подій та останніх новин.
         </div>
@@ -141,6 +147,86 @@
         </form>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="footer__connect">
+          <a href="#" class="footer__logo title">
+            NA
+            <br>
+            MU
+          </a>
+          <div class="footer__socials">
+            <a class="footer__link footer__link--fb" href="https://www.facebook.com/"></a>
+            <a class="footer__link footer__link--insta" href="https://www.instagram.com/"></a>
+          </div>
+        </div>
+
+        <div class="footer__inform">
+          <div class="footer__schedule">
+            <p>Графік роботи</p>
+            <p>
+              <strong>12:00 — 20:00</strong> середа
+              <br>
+              <strong>12:00 — 20:00</strong> четвер
+              <br>
+              <strong>12:00 — 20:00</strong> п’ятниця
+              <br>
+              <strong>11:00 — 19:00</strong> субота
+              <br>
+              <strong>11:00 — 19:00</strong> неділя
+            </p>
+            <p>
+              Вихідні понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contacts">
+            <a name="contacts">
+              <p>Контакти:</p>
+            </a>
+            <p>
+              вул. М. Грушевського, 6;
+              <br>
+              Київ, 01001
+              <br>
+              <a href="tel:+380442781357">тел. +38 (044) 278-13-57</a>
+              <br>
+              факс +38 (044) 278-74-54
+              <br>
+              <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+            </p>
+          </div>
+          <a href="#" class="footer__arrow"></a>
+        </div>
+
+        <div class="footer__navigation">
+          <div class="footer__navigation--left">
+            <a href="#gallery">Галерея</a>
+            <a href="#events">Виставки та події</a>
+            <a href="#contacts">Відвідування</a>
+            <a href="#subscribe">Стати нашим другом</a>
+          </div>
+
+          <div class="footer__navigation--right">
+            <a href="#">Про Нас</a>
+            <a href="#">Магазин</a>
+            <a href="#">Блог</a>
+            <a href="#contacts">Контакти</a>
+          </div>
+        </div>
+
+        <div class="footer__rights">
+          <div class="footer__design">Designed by Zhyriada Marina</div>
+          <div class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
