--- a/src/index.html
+++ b/src/index.html
@@ -12,83 +12,77 @@
   <body>
     <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
     <header class="header">
+      <a name="about"></a>
       <div class="header__content">
         <div class="header__position">
 
-          <div class="header__menu">
-            <input type="checkbox">
-            <span></span>
-            <span></span>
-            <span></span>
-            <nav class="nav">
-              <h1 class="header__text--nav">
-                NA
-                <br>
-                MU
-              </h1>
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a href="#" class="nav__link">
-                    Галерея
-                  </a>
-                </li>
-                <li class="nav__item">
-                  <a href="#" class="nav__link">
-                    Виставки та події
-                  </a>
-                </li>
-                <li class="nav__item">
-                  <a href="#" class="nav__link">
-                    Відвідування
-                  </a>
-                </li>
-                <li class="nav__item">
-                  <a href="#" class="nav__link">
-                    Стати нашим другом
-                  </a>
-                </li>
-                <li class="nav__item">
-                  <a href="#" class="nav__link">
-                    Про Нас
-                  </a>
-                </li>
-                <li class="nav__item">
-                  <a href="#" class="nav__link">
-                    Магазин
-                  </a>
-                </li>
-                <li class="nav__item">
-                  <a href="#" class="nav__link">
-                    Блог
-                  </a>
-                </li>
-                <li class="nav__item">
-                  <a href="#" class="nav__link">
-                    Контакти
-                  </a>
-                </li>
-              </ul>
-              <div class="nav__icons">
-                <img
-                  class="nav__icon"
-                  src="images/Icon/facebook.svg"
-                  alt="Facebook icon"
-                >
-                <img
-                  class="nav__icon"
-                  src="./images/Icon/instagram.svg"
-                  alt="Instagram icon"
-                >
-                <img
-                  class="nav__icon"
-                  src="./images/Icon/twitter.svg"
-                  alt="Twitter icon"
-                >
-              </div>
-            </nav>
-          </div>
 
           <div class="header__position header__position--menu">
+            <div class="header__menu">
+              <input type="checkbox">
+              <span></span>
+              <span></span>
+              <span></span>
+              <nav class="nav">
+                <a href="#" class="header__link--logo">
+                  <img
+                    class="header__logo"
+                    src="images/Icon/NA MU.svg"
+                    alt="logo"
+                  >
+                </a>
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#gallery" class="nav__link">
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#event" class="nav__link">
+                      Виставки та події
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#visited" class="nav__link">
+                      Відвідування
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#friend" class="nav__link">
+                      Стати нашим другом
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#event" class="nav__link">
+                      Про Нас
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#gallery" class="nav__link">
+                      Магазин
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#event" class="nav__link">
+                      Блог
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#contact" class="nav__link">
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+                <div class="nav__icons">
+                  <img
+                    class="nav__icon"
+                    src="images/Icon/D.svg"
+                    alt="Facebook icon"
+                  >
+                </div>
+              </nav>
+            </div>
+
             <div class="header__events">
               <p class="header__events--text">ПОДІЇ</p>
               <hr class="header__line">
@@ -119,6 +113,7 @@
     </header>
 
     <section class="section">
+      <a name="event"></a>
       <h1 class="section__title">Актуальні події</h1>
       <div class="event">
 
@@ -181,6 +176,7 @@
 
       </div>
 
+      <a name="visited"></a>
     </section>
 
     <section class="fon">
@@ -194,7 +190,7 @@
       <div class="fon__title">
         <p class="event__exhibition event__exhibition--fon">
           ЛЕКЦІЯ
-          <a href="#" class="event__link event__link--fon">
+          <a href="#event" class="event__link event__link--fon">
             26/08/2019 - 11:00
           </a>
         </p>
@@ -205,6 +201,7 @@
     </section>
 
     <section class="section">
+      <a name="gallery"></a>
       <h1 class="section__title">Галерея</h1>
       <div class="gallery">
         <img
@@ -239,10 +236,10 @@
         >
         <button class="gallery__button">></button>
       </div>
+      <a name="friend"></a>
     </section>
 
     <section class="subscription">
-
       <div class="subscription__photos">
         <img
           class="subscription__photo"
@@ -283,16 +280,26 @@
               MU
             </h2>
             <div>
-              <a href="#" class="footer__link footer__link--media">
+              <a
+                href="https://www.facebook.com/"
+                class="footer__link footer__link--media"
+                target="blank"
+              >
                 <img
                   src="images/Icon/facebook.svg"
                   alt="Icon facebook"
+                  class="footer__link--media"
                 >
               </a>
-              <a href="#" class="footer__link footer__link--media">
+              <a
+                href="https://www.instagram.com/"
+                class="footer__link footer__link--media"
+                target="blank"
+              >
                 <img
                   src="images/Icon/instagram.svg"
                   alt="icon instagram"
+                  class="footer__link--media"
                 >
               </a>
             </div>
@@ -330,17 +337,30 @@
               </p>
               <br>
               <p class="footer__text footer__text--addres">
-                <a href="#" class="footer__link footer__link--address">
+                <a
+                  href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4493921,30.5240929,15.82z/data=!4m5!3m4!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593"
+                  class="footer__link footer__link--address"
+                  target="blank"
+                >
                   вул. М. Грушевського, 6; Київ, 01001
                 </a>
                 <br>
-                <a href="#" class="footer__link footer__link--address">
+                <a
+                  href="tel:+38 (044) 278-13-57"
+                  class="footer__link footer__link--address"
+                >
                   тел. +38 (044) 278-13-57
                 </a>
-                <a href="#" class="footer__link footer__link--address">
+                <a
+                  href="tel:+38 (044) 278-74-54"
+                  class="footer__link footer__link--address"
+                >
                   факс +38 (044) 278-74-54
                 </a>
-                <a href="#" class="footer__link footer__link--address">
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="footer__link footer__link--address"
+                >
                   e-mail: info@namu.kiev.ua
                 </a>
               </p>
@@ -354,42 +374,42 @@
           <nav class="footer__nav">
             <ul class="footer__list">
               <li class="footer__item">
-                <a href="#" class="footer__link footer__link--menu">
+                <a href="#gallery" class="footer__link footer__link--menu">
                   Галерея
                 </a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link footer__link--menu">
+                <a href="#about" class="footer__link footer__link--menu">
                   Про нас
                 </a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link footer__link--menu">
+                <a href="#event" class="footer__link footer__link--menu">
                   Виставки та події
                 </a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link footer__link--menu">
+                <a href="#gallery" class="footer__link footer__link--menu">
                   Магазин
                 </a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link footer__link--menu">
+                <a href="#visited" class="footer__link footer__link--menu">
                   Відвідування
                 </a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link footer__link--menu">
+                <a href="#event" class="footer__link footer__link--menu">
                   Блог
                 </a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link footer__link--menu">
+                <a href="#friend" class="footer__link footer__link--menu">
                   Стати нашим другом
                 </a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link footer__link--menu">
+                <a href="#contact" class="footer__link footer__link--menu">
                   Контакти
                 </a>
               </li>
@@ -401,6 +421,7 @@
       </div>
 
     </footer>
+    <a name="contact"></a>
 
   </body>
 
