tablet media query added

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
   <body>
     <div class="wrapper">
       <header class="header">
+        <div class="header__logo logo">NA<br>MU</div>
+        <div class="header__image">
+          <img src="./images/museum_photo.png" alt="Museum picture">
+        </div>
         <div class="header__container">
           <div class="header__burger burger">
             <input type="checkbox" id="check-menu">
@@ -26,25 +30,19 @@
               <a class="burger__link" href="#about">About</a>
             </nav>
           </div>
-          <div class="header__logo logo">NA<br>MU</div>
-          <div class="header__side-text"></div>
+          <!-- <div class="header__side-text"></div> -->
           <p class="header__events">ПОДІЇ</p>
           <h1 class="header__name">ХУДОЖ<span class="header__name-transparent">НІЙ</span></span><br>МУЗЕЙ</h1>
           <a class="header__tickets" href="#">КВИТКИ</a>
-          <div class="header__image">
-            <img src="./images/museum_photo.png" alt="Museum picture">
-          </div>
         </div>
       </header>
       <main class="main">
         <section class="events">
           <h2 class="events__title">Актуальні події</h2>
           <div class="events__event-card-1 event-card">
-            <img
-              class="event-card__image events__event-card-1--left-image"
-              src="images/events_1.png"
-              alt="events picture"
-            >
+            <div class="event-card__image events__event-card-1--left-image">
+              <img src="images/events_1.png" alt="events picture">
+            </div>
             <div class="event-card__description events__event-card-1--right-desc">
               <div class="event-card__description-title">
                 <p class="event-card__description-type">ВИСТАВКА</p>
@@ -61,11 +59,9 @@
           </div>
           <!--  -->
           <div class="events__event-card-2 event-card">
-            <img
-              class="event-card__image events__event-card-2--right-image"
-              src="images/events_2.png"
-              alt="events picture"
-              >
+            <div class="event-card__image events__event-card-2--right-image">
+              <img src="images/events_2.png" alt="events picture">
+            </div>
             <div class="event-card__description events__event-card-2--left-desc">
               <div class="event-card__description-title">
                 <p class="event-card__description-type">ВИСТАВКА</p>
@@ -103,12 +99,21 @@
             <div class="gallery__item gallery__item--big">
               <img src="images/gallery2.png" alt="gallery picture">
             </div>
+            <div class="gallery__item">
+              <img src="images/geese.png" alt="gallery picture">
+            </div>
             <div class="gallery__item gallery__item--big">
               <img src="images/gallery3.png" alt="gallery picture">
             </div>
             <div class="gallery__item">
               <img src="images/gallery4.png" alt="gallery picture">
             </div>
+            <div class="gallery__item">
+              <img src="images/ppl.png" alt="gallery picture">
+            </div>
+          </div>
+          <div class="gallery__dots">
+            <img src="images/gallery_dots.svg" alt="">
           </div>
         </section>
         <section class="subscription">
