news footer adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -164,12 +164,18 @@
                 </div>
               </div>
               <div class="event__image-wrap">
-                <img class="event__image" src="images/events-pic1.png" alt="event pic">
+                <img
+                  class="event__image"
+                  src="images/events-pic1.png"
+                  alt="event pic">
               </div>
             </div>
             <div class="events__block event">
               <div class="event__image-wrap">
-                <img class="event__image" src="images/events-pic2.png" alt="event2">
+                <img
+                  class="event__image"
+                  src="images/events-pic2.png"
+                  alt="event2">
               </div>
               <div class="event__info">
                 <div class="event__date">
@@ -207,24 +213,35 @@
             <div class="news__title">Новини</div>
             <div class="news__gallery">
               <div class="news__item news-card">
-                <div class="news-card__picture-wrap">
-                  <img src="images/news-pic1.png" alt="">
+                <div class="news-card__image-wrap">
+                  <img
+                    class="news-card__image"
+                    src="images/news-pic1.png"
+                    alt=""
+                  >
                 </div>
                 <div class="news-card__date">9 серпня 2019</div>
                 <div class="news-card__title">Оголошення переможця</div>
                 <div class="news-card__description">Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...</div>
               </div>
               <div class="news__item news-card">
-                <div class="news-card__picture-wrap">
-                  <img src="images/news-pic2.png" alt="">
+                <div class="news-card__image-wrap">
+                  <img
+                    class="news-card__image"
+                    src="images/news-pic2.png"
+                    alt=""
+                  >
                 </div>
                 <div class="news-card__date">9 серпня 2019</div>
                 <div class="news-card__title">Міжнародний день котів</div>
                 <div class="news-card__description">Музей з левами не може просто так взяти і пропустити Міжнародний день котів!</div>
               </div>
               <div class="news__item news-card">
-                <div class="news-card__picture-wrap">
-                  <img src="images/news-pic3.png" alt="">
+                <div class="news-card__image-wrap">
+                  <img
+                    class="news-card__image"
+                    src="images/news-pic3.png"
+                    alt="">
                 </div>
                 <div class="news-card__date">9 серпня 2019</div>
                 <div class="news-card__title">200 років П. Кулішу</div>
