all done (without hover)

--- a/src/index.html
+++ b/src/index.html
@@ -33,16 +33,16 @@
         <nav class="nav menu__nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link">Галерея</a>
+              <a href="#gallery" class="nav__link">Галерея</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Виставки та події</a>
+              <a href="#events" class="nav__link">Виставки та події</a>
             </li>
             <li class="nav__item">
               <a href="#" class="nav__link">Відвідування</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Стати нашим другом</a>
+              <a href="#subscription" class="nav__link">Стати нашим другом</a>
             </li>
             <li class="nav__item">
               <a href="#" class="nav__link">Про Нас</a>
@@ -69,7 +69,7 @@
           <h1 class="capital__title">
             худож<span class="capital__title--empty">ній</span><br>музей
           </h1>
-          <a href="#" class="capital__item ">квитки
+          <a href="#subscription" class="capital__item ">квитки
             <div class="capital__button button"></div>
           </a>
         </div>
@@ -82,12 +82,12 @@
         <section class="events">
 
           <span class="events__text">події</span>
-          <h2 class="events__title">Актуальні події</h2>
+          <h2 class="events__title" id="events">Актуальні події</h2>
 
           <div class="events__item">
             <img src="./images/event-1.png"
-            alt="landscape"
-            class="events__picture"
+              alt="landscape"
+              class="events__picture"
             >
             <div class="events__descr descr">
               <div class="descr__main">
@@ -141,8 +141,8 @@
       </section>
 
       <div class="container">
-        <section class="gallary">
-          <h2 class="gallary__title">Галерея</h2>
+        <section class="gallery">
+          <h2 class="gallery__title" id="gallery">Галерея</h2>
 
           <div class="gallery__slider slider">
 
@@ -179,36 +179,36 @@
             >
             <label for="4" class="slider__label"></label>
 
-            <div class="gallary__wrapper">
+            <div class="gallery__wrapper">
               <img
-                src="./images/gallary-1.png"
+                src="./images/gallery-1.png"
                 alt="arts"
-                class="gallary__picture gallary__picture--1"
+                class="gallery__picture gallery__picture--1"
                 >
               <img
-                src="./images/gallary-2.png"
+                src="./images/gallery-2.png"
                 alt="arts"
-                class="gallary__picture gallary__picture--2"
+                class="gallery__picture gallery__picture--2"
                 >
               <img
-                src="./images/gallary-3.png"
+                src="./images/gallery-3.png"
                 alt="arts"
-                class="gallary__picture gallary__picture--3"
+                class="gallery__picture gallery__picture--3"
                 >
               <img
-                src="./images/gallary-4.png"
+                src="./images/gallery-4.png"
                 alt="arts"
-                class="gallary__picture gallary__picture--4"
+                class="gallery__picture gallery__picture--4"
                 >
               <img
-                src="./images/gallary-5.png"
+                src="./images/gallery-5.png"
                 alt="arts"
-                class="gallary__picture gallary__picture--5"
+                class="gallery__picture gallery__picture--5"
                 >
               <img
-                src="./images/gallary-6.png"
+                src="./images/gallery-6.png"
                 alt="arts"
-                class="gallary__picture gallary__picture--6"
+                class="gallery__picture gallery__picture--6"
                 >
             </div>
           </div>
@@ -218,7 +218,7 @@
 
       <selection class="subscription container__subscription">
         <div class="subscription__wrapper">
-          <h2 class="subscription__title">Підписка</h2>
+          <h2 class="subscription__title" id="subscription">Підписка</h2>
           <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
           <form class="subscription__email">
             <input
@@ -234,9 +234,126 @@
         </div>
       </selection>
 
-
-
     </main>
+    <footer>
+
+      <div class="container">
+
+        <section class="footer">
+
+          <div class="footer__top">
+
+            <div class="footer__top-left">
+
+              <div class="footer__icons">
+                <a href="#">
+                  <img
+                    src="./images/NA MU.png"
+                    class="footer__logo logo"
+                    alt="logo namu"
+                  >
+                </a>
+                <div class="footer__network-icons">
+                  <a href="#">
+                    <img
+                      src="./images/Facebook.png"
+                      class="footer__facebook"
+                      alt="link to facebook"
+                    >
+                  </a>
+                  <a href="#">
+                    <img
+                      src="./images/instagram.png"
+                      class="footer__instagram"
+                      alt="link to instagram"
+                    >
+                  </a>
+                </div>
+              </div>
+
+              <div class="footer__info">
+                <p class="footer__time">Графік роботи<br><br>
+                  <span class="footer__time-bold">12:00 — 20:00</span> середа<br>
+                  <span class="footer__time-bold">12:00 — 20:00</span> четвер<br>
+                  <span class="footer__time-bold">12:00 — 20:00</span> п’ятниця<br>
+                  <span class="footer__time-bold">11:00 — 19:00</span> субота<br>
+                  <span class="footer__time-bold">11:00 — 19:00</span> неділя<br>
+                  <br><br>
+                  <span class="footer__time-bold">Вихідні</span>
+                  понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+                <p class="footer__contacts">Контакти:<br><br>
+                  вул. М. Грушевського, 6; Київ, 01001<br>
+                  <a
+                    href="tel:+38 (044) 278-13-57"
+                    class="footer__contacts-link"
+                  >
+                    тел. +38 (044) 278-13-57<br>
+                  </a>
+                  <a
+                    href="tel:+38 (044) 278-74-54"
+                    class="footer__contacts-link"
+                  >
+                    факс +38 (044) 278-74-54<br>
+                  </a>
+                  <a
+                    href="mailto:info@namu.kiev.ua"
+                    class="footer__contacts-link"
+                  >
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </p>
+              </div>
+            </div>
+
+            <div class="footer__line">
+              <a href="" class="footer__button button button--foot">↑</a>
+            </div>
+
+            <div class="footer__menu">
+              <nav>
+                <ul class="footer__list">
+                  <li class="footer__item">
+                    <a href="#gallery" class="footer__link">Галерея</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="nav__link">Про Нас</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#events" class="nav__link">Виставки та події</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="nav__link">Магазин</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="nav__link">Відвідування</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="nav__link">Блог</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#subscription" class="nav__link">Стати нашим другом</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#" class="footer__link">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="footer__bottom">
+            <p>Designed by Zhyriada Marina</p>
+            <p>Copyright © 2019. All Rights Reserved.</p>
+          </div>
+
+        </section>
+
+      </div>
+
+    </footer>
 
 
 
