light bugs were fixed

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         МУЗЕЙ
       </h1>
 
-      <form action="GET" class="header__search-form search-form">
+      <form action="" class="header__search-form search-form">
         <input
           type="text"
           class="search-form__input"
@@ -190,8 +190,9 @@
           >
 
 
-          <button class="galery__button galery__button--mobile-left">
+          <button class="galery__button galery__button--mobile-left mobile-button">
             <svg
+              class="mobile-button__arrow"
               width="8"
               height="12"
               viewBox="0 0 8 12"
@@ -203,8 +204,9 @@
             </svg>
           </button>
 
-          <button class="galery__button galery__button--mobile-right">
+          <button class="galery__button galery__button--mobile-right mobile-button">
             <svg
+              class="mobile-button__arrow"
               width="8"
               height="12"
               viewBox="0 0 8 12"
@@ -330,17 +332,28 @@
           <li class="footer__timetable-item"><span class="footer__timetable-item--bold">12:00 — 20:00</span> п’ятниця</li>
           <li class="footer__timetable-item"><span class="footer__timetable-item--bold">11:00 — 19:00</span> субота</li>
           <li class="footer__timetable-item"><span class="footer__timetable-item--bold">11:00 — 19:00</span> неділя</li>
-          <p class="footer__text">Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею</p>
+          <p class="footer__text">
+            Вихідні понеділок, вівторок.<br>
+            Каса припиняє роботу за 1 годину до закриття музею.
+          </p>
         </ul>
       </div>
 
       <div class="footer__contacts" id="contacts">
         <h3 class="footer__section-header">Контакти:</h3>
         <p class="footer__text">
-          вул. М. Грушевського, 6; Київ, 01001<br>
-          тел. +38 (044) 278-13-57<br>
-          факс +38 (044) 278-74-54<br>
-          e-mail: info@namu.kiev.ua<br>
+          <a
+            href="https://goo.gl/maps/YY3QGXp2DZhdZ7NT8"
+            class="footer__link"
+            target="_blank"
+            rel="noopener"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <br>
+          тел: <a href="tel:+380442781357" class="footer__link">+38 (044) 278-13-57</a><br>
+          факс: +38 (044) 278-74-54<br>
+          e-mail: <a href="mailto:info@namu.kiev.ua" class="footer__link">info@namu.kiev.ua</a><br>
         </p>
       </div>
 
