toggler was fixed

--- a/src/index.html
+++ b/src/index.html
@@ -70,11 +70,13 @@
         </button>
       </form>
 
-      <span
-        class="toggler header__toggler"
-        onclick="toggleSidebar()"
-      >
-      </span>
+      <div class="header__label-for-toggler" onclick="toggleSidebar()">
+        <span
+          class="toggler header__toggler"
+          onclick="toggleSidebar()"
+        >
+        </span>
+      </div>
     </header>
     <main class="main">
       <section class="announcements" id="annonucements">
