mobile version added

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,14 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">
+      <header class="header" id="header">
         <div class="header__logo logo">NA<br>MU</div>
         <div class="header__image">
-          <img src="./images/museum_photo.png" alt="Museum picture">
+          <picture>
+            <source media="(max-width: 600px)" srcset="./images/namu_320.png">
+            <source srcset="./images/museum_photo.png">
+            <img src="./images/museum_photo.png" alt="Museum picture">
+          </picture>
         </div>
         <div class="header__container">
           <div class="header__burger burger">
@@ -170,6 +174,11 @@
             факс +38 (044) 278-74-54
             e-mail: info@namu.kiev.ua
           </div>
+        </div>
+        <div class="footer__arrow-up">
+          <a href="#header">
+            <img src="images/Arrow_up.svg" alt="go up">
+          </a>
         </div>
         <div class="footer__nav-site">
           <a href="" class="footer__nav-site-link">Галерея</a>
